...
    <string name="activity_rent">Rent Bike</string>

    <!-- EditText Hints -->
    <string name="edit_password">Password</string>
    <string name="edit_login_email">Email</string>

    <string name="edit_card_number">Card number</string>
    <string name="edit_card_holder">Card holder name</string>
    <string name="edit_card_expires">Expires MM/YY</string>
    <string name="edit_card_cvv">CVV</string>

    <!-- Labels -->
    <string name="label_list_view">List View</string>
    <string name="label_map_view">Map View</string>

    <string name="label_get_directions">Get Directions</string>
...
    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_try_again">Try Again</string>
    <string name="btn_check_again">Check Again</string>

    <string name="btn_rent">Rent</string>

    <!-- Messages -->
    <string name="msg_confirm_rent">Are you sure you want to rent pike in %s?</string>
    <string name="msg_congratulation_rent">Congratulation! You have just rent a bike in %s.\nWe hope you enjoy the experience!</string>

    <!-- Progress Messages -->
    <string name="_please_wait">Please wait&#8230;</string>
    <string name="_logging_in">Logging in&#8230;</string>
    <string name="_registering">Signing up&#8230;</string>
    <string name="_logging_out">Logging out&#8230;</string>
...
