<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Mahmoud Abdurrahman 2017. All Rights Reserved.
  ~ <p/>
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ <p/>
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ <p/>
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

    <!-- General Errors -->
    <string name="error_no_items_to_display">No items to display</string>
    <string name="error_generic_server_error">There was an error contacting the server, %1$s</string>
    <string name="error_logout">Failed to logout, please contact support!</string>

    <!-- Validation Errors -->
    <string name="error_required">This field is required</string>
    <string name="error_email_not_valid">Please enter a valid email</string>
    <string name="error_string_length">This field must be at least %d characters long</string>
    <string name="error_password_length">Your password must be at least 8 characters long</string>
    <string name="error_password_capital_letters">Your password must include at least one capital letter</string>
    <string name="error_password_numbers">Your password must include at least one number</string>

    <string name="error_creditcard_length">The Credit Card number must be 16 numbers long</string>
    <string name="error_creditcard_invalid_cardtype">Invalid Credit Card format</string>
    <string name="error_creditcard_invalid_visa">Invalid Visa format</string>
    <string name="error_creditcard_invalid_mastercard">Invalid MasterCard format</string>

    <string name="error_creditcard_invalid_expiry">Invalid Expiry Date</string>
    <string name="error_creditcard_invalid_expiry_month">Invalid Expiry Month</string>
    <string name="error_creditcard_invalid_expiry_year">Invalid Expiry Year</string>

</resources>
